--- a/15-designo_multi_page_website/scss/base/_variables.scss
+++ b/15-designo_multi_page_website/scss/base/_variables.scss
@@ -7,7 +7,7 @@
   --font-weight-medium: 500;
 
   /* Font Sizes */
-  --font-size-500: 1.75rem;
+  --font-size-500: clamp(1.5rem, 1vw + 1rem, 3rem);
   --font-size-400: 1.75rem;
   --font-size-300: 1.5rem;
   --font-size-200: 1.25rem;
@@ -23,11 +23,12 @@
   --dark-grey: hsl(264, 5%, 20%);
   --light-grey: hsl(210, 17%, 95%);
   --footer-text-color: hsl(0, 0%, 100%, 0.65);
-  --rawBlack: 270, 3%, 11%;
-  --rawPeach: 1, 73%, 66%;
+  --raw-white: 0, 0%, 100%;
+  --raw-black: 270, 3%, 11%;
+  --raw-peach: 1, 73%, 66%;
 
   /* Spacing */
-  --flex-gap: 1rem;
+  --gap: 1rem;
   --flow-space: 1.25rem;
   --section-padding: 3.75rem 0;
 
@@ -49,7 +50,7 @@
     --font-size-400: 2.5rem;
     --font-size-100: 1rem;
 
-    --flex-gap: 1rem;
+    --gap: 1rem;
     --section-padding: 5rem 0;
 
 
