--- a/15-designo_multi_page_website/scss/pages/_home.scss
+++ b/15-designo_multi_page_website/scss/pages/_home.scss
@@ -1,28 +1,28 @@
 .service {
-  min-height: 15rem;
-  border-radius: 0.75rem;
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  position: relative;
-  cursor: pointer;
-  overflow: hidden;
-  text-align: center;
+    min-height: 15rem;
+    border-radius: 0.75rem;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+    cursor: pointer;
+    overflow: hidden;
+    text-align: center;
 
   &::before {
     content: '';
     position: absolute;
     inset: 0;
-    background-color: hsl(var(--rawBlack), 0.45);
+    background-color: hsl(var(--raw-black), 0.45);
     transition: all 0.4s ease;
   }
 
   &:hover::before {
-    background-color: hsl(var(--rawPeach), 0.5);
+    background-color: hsl(var(--raw-peach), 0.5);
   }
 
   &__heading,
-  &__link {
+  &__text {
     position: relative;
     z-index: 999;
   }
@@ -32,28 +32,28 @@
     margin-left: 0.5rem;
   }
 
-  &--web-design {
+  &--web {
     background-image: url('/images/home/mobile/image-web-design.jpg');
   }
 
-  &--app-design {
+  &--app {
     background-image: url('/images/home/mobile/image-app-design.jpg');
   }
 
-  &--graphic-design {
+  &--graphic {
     background-image: url('/images/home/mobile/image-graphic-design.jpg');
   }
 
   @media (min-width: 35em) {
-    &--web-design {
+    &--web {
       background-image: url('/images/home/tablet/image-web-design.jpg')
     }
 
-    &--app-design {
+    &--app {
       background-image: url('/images/home/tablet/image-app-design.jpg');
     }
 
-    &--graphic-design {
+    &--graphic {
       background-image: url('/images/home/tablet/image-graphic-design.jpg');
     }
   }
@@ -62,16 +62,17 @@
     & {
       min-height: 20rem;
     }
-    .home &--web-design {
+
+    .home &--web {
       background-image: url('/images/home/desktop/image-web-design-large.jpg');
       grid-row: span 2;
     }
 
-    &--app-design {
+    &--app {
       background-image: url('/images/home/desktop/image-app-design.jpg');
     }
 
-    &--graphic-design {
+    &--graphic {
       background-image: url('/images/home/desktop/image-graphic-design.jpg');
     }
   }
