--- a/09-tip_calculator_app/css/style.css
+++ b/09-tip_calculator_app/css/style.css
@@ -12,18 +12,15 @@
     --disabled-button-color: hsla(183, 100%, 15%, 0.657);
 
     /* Typography */
-   --space-mono: 'Space Mono', monospace;;
+   --font-space-mono: 'Space Mono', monospace;;
    --font-weight-bold: 700;
-   --font-size-12: 0.75rem;
+
    --font-size-13: 0.8125rem;
    --font-size-14: 0.875rem;
-   --font-size-16: 1rem;
    --font-size-20: 1.25rem;
    --font-size-22: 1.375rem;
    --font-size-24: 1.5rem;
    --font-size-28: 1.75rem;
-   --font-size-32: 2rem;
-   --font-size-36: 2.25rem;
    --font-size-40: 2.5rem;
    --font-size-48: 3rem;
 }
@@ -36,7 +33,7 @@
 }
 
 body {
-    font-family: var(--space-mono);
+    font-family: var(--font-space-mono);
     min-height: 100vh;
     display: flex;
     justify-content: center;
@@ -84,7 +81,7 @@ body {
  }
 
  .heading__wrapper {
-    padding: 2.5rem 0rem;
+    padding: 2.5rem 0;
  }
 
  .label-heading {
@@ -245,7 +242,7 @@ input::-webkit-inner-spin-button {
 .reset-button {
     margin-top: auto;
     width: 100%;
-    padding: 0.5rem 0rem;
+    padding: 0.5rem 0;
     font-family: inherit;
     font-size: var(--font-size-20);
     background-color: var(--strong-cyan);
